--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,14 @@ services:
     depends_on:
       - "kubernetes"
 
+  example-controller:
+    image: "example-controller:v0.1.0"
+    depends_on:
+      - "kubernetes"
+    command: "sh -c \"/go/src/github.com/NervanaSystems/kube-controllers-go/resources/wait-port kubernetes 8080 && /go/bin/example-controller --kubeconfig=/root/.kube/config\""
+    volumes:
+      - ./resources:/root/.kube
+
   test:
     image: "kube-controllers-go:v0.1.0"
     depends_on:
