Avoid testing vendored packages

--- a/cmd/example-controller/Makefile
+++ b/cmd/example-controller/Makefile
@@ -7,4 +7,7 @@ docker:
 	docker build --no-cache -t example-controller:$(version) .
 
 test:
-	go test -v ./...
+	go test -v ./pkg/...
+	go test -v ./apis/...
+	go test -v ./client/...
+	go test -v ./controller/...
