--- a/cmd/example-controller/Makefile
+++ b/cmd/example-controller/Makefile
@@ -6,7 +6,13 @@ docker:
 	(cd ../../ && make docker)
 	docker build --no-cache -t example-controller:$(version) .
 
-test:
+lint:
+	gometalinter --config=lint.json .
+	gometalinter --config=lint.json ./apis/...
+	gometalinter --config=lint.json ./client/...
+	gometalinter --config=lint.json ./controller/...
+
+test: lint
 	go test -v .
 	go test -v ./apis/...
 	go test -v ./client/...
