--- a/Dockerfile.dep
+++ b/Dockerfile.dep
@@ -7,3 +7,6 @@ ADD . /go/src/github.com/NervanaSystems/kube-controllers-go
 WORKDIR /go/src/github.com/NervanaSystems/kube-controllers-go
 RUN rm -rf vendor
 RUN dep ensure
+RUN curl -LO https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl
+RUN chmod +x ./kubectl && cp ./kubectl /usr/local/bin/kubectl
+RUN mkdir -p /root/.kube && cp ./resources/config /root/.kube/config
