Added stream prediction controller (#6)
This PR adds the following changes:
- Registers a new stream predict CRD.
- A controller skeleton to monitor the objects of a stream predict CRD
  which takes action based on the CRD spec.
- An e2e test for the controller.

Reverting

--- a/cmd/stream-prediction-controller/Makefile
+++ b/cmd/stream-prediction-controller/Makefile
@@ -6,5 +6,17 @@ docker:
 	(cd ../../ && make docker)
 	docker build --no-cache -t stream-prediction-controller:$(version) .
 
-test:
+lint:
+	gometalinter --config=lint.json .
+	# Disabling golint for apis since it conflicts with the deepcopy-gen annotations.
+	gometalinter --config=lint.json --disable=golint ./apis/...
+	gometalinter --config=lint.json ./client/...
+	gometalinter --config=lint.json ./controller/...
+	gometalinter --config=lint.json ./test/...
+	gometalinter --config=lint.json ./util/...
+
+test: lint
 	go test -v .
+	go test -v ./apis/...
+	go test -v ./client/...
+	go test -v ./controller/...
