--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,9 @@ services:
 
   stream-prediction-controller:
     image: "stream-prediction-controller:v0.1.0"
+    command: "sh -c \"/go/src/github.com/NervanaSystems/kube-controllers-go/resources/wait-port kubernetes 8080 && /go/bin/stream-prediction-controller --kubeconfig=/root/.kube/config --namespace=default --v=4\""
+    volumes:
+      - ./resources:/root/.kube
     depends_on:
       - "kubernetes"
 
@@ -33,3 +36,5 @@ services:
       - "kubernetes"
       - "stream-prediction-controller"
     command: "sleep inf"
+    volumes:
+      - ./resources:/root/.kube
