--- a/Dockerfile.dep
+++ b/Dockerfile.dep
@@ -5,6 +5,7 @@ RUN go get -u github.com/golang/dep/cmd/dep
 RUN mkdir -p /go/src/github.com/NervanaSystems
 ADD . /go/src/github.com/NervanaSystems/kube-controllers-go
 WORKDIR /go/src/github.com/NervanaSystems/kube-controllers-go
+RUN make install-linter
 RUN rm -rf vendor
 RUN dep ensure
 RUN curl -LO https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl
