--- a/Dockerfile.dep
+++ b/Dockerfile.dep
@@ -7,6 +7,8 @@ ADD . /go/src/github.com/NervanaSystems/kube-controllers-go
 WORKDIR /go/src/github.com/NervanaSystems/kube-controllers-go
 RUN make install-linter
 RUN rm -rf vendor
-RUN dep ensure
+# in order to build each of the controllers, the vendored deps need to be on
+# the shared gopath.
+RUN dep ensure && cp -R vendor/* /go/src/ && rm -rf *
 RUN curl -LO https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl
 RUN chmod +x ./kubectl && cp ./kubectl /usr/local/bin/kubectl
