--- a/cmd/stream-prediction-controller/Makefile
+++ b/cmd/stream-prediction-controller/Makefile
@@ -10,13 +10,11 @@ lint:
 	gometalinter --config=lint.json .
 	# Disabling golint for apis since it conflicts with the deepcopy-gen annotations.
 	gometalinter --config=lint.json --disable=golint ./apis/...
-	gometalinter --config=lint.json ./client/...
-	gometalinter --config=lint.json ./controller/...
 	gometalinter --config=lint.json ./test/...
-	gometalinter --config=lint.json ./util/...
 
 test: lint
 	go test -v .
 	go test -v ./apis/...
-	go test -v ./client/...
-	go test -v ./controller/...
+
+test-e2e:
+	go test -v ./test/e2e/...
