--- a/Dockerfile.dep
+++ b/Dockerfile.dep
@@ -1,6 +1,7 @@
 FROM golang:1.8.3
 
-RUN apt-get update && apt-get install -y netcat
+RUN apt-get update && apt-get install -y netcat python-pip
+RUN pip install jsonschema
 RUN go get -u github.com/golang/dep/cmd/dep
 RUN mkdir -p /go/src/github.com/NervanaSystems
 ADD . /go/src/github.com/NervanaSystems/kube-controllers-go
