[ACCEN-113] Deploy a Stream job though CRD / Controller pair (#16)
* Flattened sub resource patch

* Refactored subresources into resource client.

* Reusable restClient wrapper for CRDs.

* JSON fields and other nits.

--- a/cmd/stream-prediction-controller/Makefile
+++ b/cmd/stream-prediction-controller/Makefile
@@ -13,6 +13,7 @@ lint:
 	# Disabling golint for apis since it conflicts with the deepcopy-gen
 	# annotations.
 	gometalinter --config=lint.json --disable=golint ./apis/...
+	gometalinter --config=lint.json ./hooks/...
 	gometalinter --config=lint.json ./test/...
 
 test: lint
@@ -22,6 +23,10 @@ test: lint
 	go test .
 	# ../../scripts/test-with-cov.sh ./apis/cr/v1 $(COV_THRESHOLD)
 	go test ./apis/cr/v1
+	# ../../scripts/test-with-cov.sh ./apis/... $(COV_THRESHOLD)
+	go test ./apis/...
+	#  ../../scripts/test-with-cov.sh ./hooks/... $(COV_THRESHOLD)
+	go test ./hooks/...
 
 test-e2e:
 	go test -v ./test/e2e/...
