--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,7 @@ services:
     command: "sh -c \"/go/src/github.com/NervanaSystems/kube-controllers-go/resources/wait-port kubernetes 8080 && /go/bin/stream-prediction-controller --kubeconfig=/root/.kube/config --namespace=default --v=4\""
     volumes:
       - ./resources:/root/.kube
+      - ./cmd/stream-prediction-controller/resources:/etc/streampredictions
     depends_on:
       - "kubernetes"
 
