--- a/Dockerfile.dep
+++ b/Dockerfile.dep
@@ -1,8 +1,11 @@
 FROM golang:1.8.3
 
-RUN apt-get update && apt-get install -y netcat python-pip
+RUN apt-get update && apt-get install -y netcat python-pip gdb vim
 RUN pip install jsonschema
 RUN go get -u github.com/golang/dep/cmd/dep
+# debugging
+RUN go get -u github.com/derekparker/delve/cmd/dlv
+ENV GODEBUGGER=gdb
 RUN mkdir -p /go/src/github.com/NervanaSystems
 ADD . /go/src/github.com/NervanaSystems/kube-controllers-go
 WORKDIR /go/src/github.com/NervanaSystems/kube-controllers-go
