--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
       - ./cmd/stream-prediction-controller/resources:/etc/streampredictions
     depends_on:
       - "kubernetes"
+    privileged: true # required for debugging
 
   example-controller:
     image: "example-controller:v0.1.0"
@@ -30,6 +31,7 @@ services:
     command: "sh -c \"/go/src/github.com/NervanaSystems/kube-controllers-go/resources/wait-port kubernetes 8080 && /go/bin/example-controller --kubeconfig=/root/.kube/config\""
     volumes:
       - ./resources:/root/.kube
+    privileged: true # required for debugging
 
   test:
     image: "kube-controllers-go:v0.1.0"
