--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,13 +12,17 @@ jobs:
                 command: |
                   set -x
                   apt-get update
-                  apt-get install -y curl make git
+                  apt-get install -y curl make git tar python
                   VER="17.03.0-ce"
                   curl -L -o /tmp/docker-$VER.tgz https://get.docker.com/builds/Linux/x86_64/docker-$VER.tgz
                   tar -xz -C /tmp -f /tmp/docker-$VER.tgz
                   mv /tmp/docker/* /usr/bin
                   curl -L https://github.com/docker/compose/releases/download/1.16.0/docker-compose-`uname -s`-`uname -m` > /usr/local/bin/docker-compose
                   chmod +x /usr/local/bin/docker-compose
+                  curl -L -o /tmp/gcloud.tar.gz https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-sdk-174.0.0-linux-x86_64.tar.gz
+                  tar -xf /tmp/gcloud.tar.gz -C /usr/local/bin
+                  /usr/local/bin/google-cloud-sdk/install.sh --quiet
+                  ln -s /usr/local/bin/google-cloud-sdk/bin/* /usr/local/bin
 
             - setup_remote_docker
 
@@ -32,4 +36,5 @@ jobs:
                 name: Run make
                 command: |
                   set -x
-                  make
+                  # Must set GOOGLE_PROJECT_ID and GOOGLE_AUTH in environment.
+                  make -e push-images
