--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
                 command: |
                   set -x
                   apt-get update
-                  apt-get install -y curl make
+                  apt-get install -y curl make git
                   VER="17.03.0-ce"
                   curl -L -o /tmp/docker-$VER.tgz https://get.docker.com/builds/Linux/x86_64/docker-$VER.tgz
                   tar -xz -C /tmp -f /tmp/docker-$VER.tgz
