--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       - 8080:8080
 
   stream-prediction-controller:
-    image: "stream-prediction-controller:v0.1.0"
+    image: "stream-prediction-controller"
     command: "sh -c \"/go/src/github.com/NervanaSystems/kube-controllers-go/resources/wait-port kubernetes 8080 && /go/bin/stream-prediction-controller --kubeconfig=/root/.kube/config --namespace=default --v=4\""
     volumes:
       - ./resources:/root/.kube
@@ -25,7 +25,7 @@ services:
     privileged: true # required for debugging
 
   example-controller:
-    image: "example-controller:v0.1.0"
+    image: "example-controller"
     depends_on:
       - "kubernetes"
     command: "sh -c \"/go/src/github.com/NervanaSystems/kube-controllers-go/resources/wait-port kubernetes 8080 && /go/bin/example-controller --kubeconfig=/root/.kube/config\""
@@ -34,7 +34,7 @@ services:
     privileged: true # required for debugging
 
   test:
-    image: "kube-controllers-go:v0.1.0"
+    image: "kube-controllers-go"
     depends_on:
       - "kubernetes"
       - "stream-prediction-controller"
