Removing autogenerated files from repo and generate just-in-time (#36)
* Auto code gen

* Forgot to add codegen files

* Remove example code and pull instead

* Updated docs

--- a/cmd/stream-prediction-controller/Makefile
+++ b/cmd/stream-prediction-controller/Makefile
@@ -37,6 +37,9 @@ test: lint
 test-e2e:
 	go test -v ./test/e2e/...
 
+code-generation:
+	/go/bin/deepcopy-gen --output-base=/go/src --input-dirs=github.com/NervanaSystems/kube-controllers-go/cmd/stream-prediction-controller/apis/cr/v1/...
+
 push-image-preflight:
 ifeq ($(GOOGLE_PROJECT_ID),)
 	$(error GOOGLE_PROJECT_ID must be set)
