Adding Ajay to code owners (#66)

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -8,4 +8,4 @@
 #
 # In addition to individual usernames, we can also
 # designate teams.
-* @balajismaniam @ConnorDoyle @nqn
+* @balajismaniam @ConnorDoyle @nqn @Ajay191191
