Enable model training with CPUs. - Includes e2e test.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,6 +48,7 @@ services:
     depends_on:
       - "kubernetes"
       - "stream-prediction-controller"
+      - "model-training-controller"
     command: "sleep inf"
     volumes:
       - ./resources:/root/.kube
