--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,20 +16,31 @@ services:
 
   stream-prediction-controller:
     image: "stream-prediction-controller"
-    command: "sh -c \"/go/src/github.com/NervanaSystems/kube-controllers-go/resources/wait-port kubernetes 8080 && /go/bin/stream-prediction-controller --kubeconfig=/root/.kube/config --namespace=e2e-test --v=4\""
-    volumes:
-      - ./resources:/root/.kube
-      - ./cmd/stream-prediction-controller/resources:/etc/streampredictions
+    command:
+      sh -c "
+      /go/src/github.com/NervanaSystems/kube-controllers-go/resources/wait-port kubernetes 8080 &&
+      /go/bin/stream-prediction-controller
+        --kubeconfig=/go/src/github.com/NervanaSystems/kube-controllers-go/resources/config
+        --deploymentFile=/go/src/github.com/NervanaSystems/kube-controllers-go/cmd/stream-prediction-controller/resources/deployment.tmpl
+        --serviceFile=/go/src/github.com/NervanaSystems/kube-controllers-go/cmd/stream-prediction-controller/resources/service.tmpl
+        --ingressFile=/go/src/github.com/NervanaSystems/kube-controllers-go/cmd/stream-prediction-controller/resources/ingress.tmpl
+        --hpaFile=/go/src/github.com/NervanaSystems/kube-controllers-go/cmd/stream-prediction-controller/resources/hpa.tmpl
+        --namespace=e2e-test
+        --v=4"
     depends_on:
       - "kubernetes"
     privileged: true # required for debugging
 
   model-training-controller:
     image: "model-training-controller"
-    command: "sh -c \"/go/src/github.com/NervanaSystems/kube-controllers-go/resources/wait-port kubernetes 8080 && /go/bin/model-training-controller --kubeconfig=/root/.kube/config --namespace=e2e-test --v=4\""
-    volumes:
-      - ./resources:/root/.kube
-      - ./cmd/model-training-controller/resources:/etc/modeltrainings
+    command:
+      sh -c "
+      /go/src/github.com/NervanaSystems/kube-controllers-go/resources/wait-port kubernetes 8080 &&
+      /go/bin/model-training-controller
+        --kubeconfig=/go/src/github.com/NervanaSystems/kube-controllers-go/resources/config
+        --jobFile=/go/src/github.com/NervanaSystems/kube-controllers-go/cmd/model-training-controller/resources/job.tmpl
+        --namespace=e2e-test
+        --v=4"
     depends_on:
       - "kubernetes"
     privileged: true # required for debugging
@@ -38,9 +49,11 @@ services:
     image: "example-controller"
     depends_on:
       - "kubernetes"
-    command: "sh -c \"/go/src/github.com/NervanaSystems/kube-controllers-go/resources/wait-port kubernetes 8080 && /go/bin/example-controller --kubeconfig=/root/.kube/config\""
-    volumes:
-      - ./resources:/root/.kube
+    command:
+      sh -c "
+      /go/src/github.com/NervanaSystems/kube-controllers-go/resources/wait-port kubernetes 8080 &&
+      /go/bin/example-controller
+        --kubeconfig=/go/src/github.com/NervanaSystems/kube-controllers-go/resources/config"
     privileged: true # required for debugging
 
   test:
@@ -49,6 +62,6 @@ services:
       - "kubernetes"
       - "stream-prediction-controller"
       - "model-training-controller"
+    environment:
+      - KUBECONFIG=/go/src/github.com/NervanaSystems/kube-controllers-go/resources/config
     command: "sleep inf"
-    volumes:
-      - ./resources:/root/.kube
