change base container for circleci (#107)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,7 +58,7 @@ jobs:
             make test-e2e
   integration_trigger:
     docker:
-      - image: nanliu/circleci:master
+      - image: nervana/circleci:master
     working_directory: ~/repo
     steps:
       - checkout
