--- a/cmd/example-controller/Dockerfile
+++ b/cmd/example-controller/Dockerfile
@@ -16,11 +16,11 @@
 # SPDX-License-Identifier: EPL-2.0
 #
 
-FROM kube-controllers-go
+FROM crd-reconciler-for-kubernetes
 
-WORKDIR /go/src/github.com/NervanaSystems/kube-controllers-go/cmd/example-controller
+WORKDIR /go/src/github.com/intel/crd-reconciler-for-kubernetes/cmd/example-controller
 # -gcflags: disable compiler optimizations and inlining
 RUN make code-generation
-RUN go install -gcflags "-N -l" github.com/NervanaSystems/kube-controllers-go/cmd/example-controller
+RUN go install -gcflags "-N -l" github.com/intel/crd-reconciler-for-kubernetes/cmd/example-controller
 RUN make test
 CMD /go/bin/example-controller
